Se agregó vista Todos los Usuarios Gráficas

--- a/frontend/src/app/components/user/user-myleagues-leaguebyid/get-table/get-table.component.html
+++ b/frontend/src/app/components/user/user-myleagues-leaguebyid/get-table/get-table.component.html
@@ -1,75 +1,42 @@
 <div class="m-container w-100">
     <h2 class="m-b-20">TABLA DE RESULTADOS</h2>
-    <table class="table-standard m-table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Equipo</th>
-                <th>Puntos</th>
-                <th>PG</th>
-                <th>PE</th>
-                <th>PP</th>
-                <th>GF</th>
-                <th>GC</th>
-                <th>DF</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Lorem</td>
-                <td>12</td>
-                <td>32</td>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
-                <td>4</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Lorem</td>
-                <td>12</td>
-                <td>32</td>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
-                <td>4</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Lorem</td>
-                <td>12</td>
-                <td>32</td>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
-                <td>4</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Lorem</td>
-                <td>12</td>
-                <td>32</td>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
-                <td>4</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Lorem</td>
-                <td>12</td>
-                <td>32</td>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
-                <td>4</td>
-                <td>5</td>
-            </tr>
-        </tbody>
-    </table>
+
+    <ng-container *ngIf="table.length === 0; else haveresults">
+        <div class="cont-centered">
+            <img class="m-b-40" id="sad-face" src="https://img.icons8.com/ios/452/sad.png" alt="sad-face.png">
+            <h1>Aún no hay equipos :(</h1>
+        </div>
+    </ng-container>
+    <ng-template #haveresults>
+        <table class="table-standard m-table">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Equipo</th>
+                    <th>Puntos</th>
+                    <th>PJ</th>
+                    <th>PG</th>
+                    <th>PE</th>
+                    <th>PP</th>
+                    <th>GF</th>
+                    <th>GC</th>
+                    <th>DF</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let x of table; let i = index" [attr.data-index]="i">
+                    <td>{{i+1}}</td>
+                    <td>{{x.equipo.nombre}}</td>
+                    <td>{{x.puntaje}}</td>
+                    <td>{{x.partidos_jugados}}</td>
+                    <td>{{x.partidos_ganados}}</td>
+                    <td>{{x.partidos_empatados}}</td>
+                    <td>{{x.partidos_perdidos}}</td>
+                    <td>{{x.goles_a_favor}}</td>
+                    <td>{{x.goles_en_contra}}</td>
+                    <td>{{x.goles_a_favor - x.goles_en_contra}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </ng-template>
 </div>
