Se editó una parte de  la vista Administrador > Graficas  > Todos los usuarios  > Ligas de usuario

--- a/frontend/src/app/components/admin/admin-charts/admin-charts-leaguebyid/admin-charts-leaguebyid.component.html
+++ b/frontend/src/app/components/admin/admin-charts/admin-charts-leaguebyid/admin-charts-leaguebyid.component.html
@@ -1,5 +1,5 @@
 <div class="m-container w-100">
-    <h2 class="m-b-20">LIGAS DE FABIO LOPEZ</h2>
+    <h2 class="m-b-20">LIGAS DE {{user.nombre | uppercase}}</h2>
     <div class="grid-4">
         <div style="position: relative" class="m-container shadowed-div cont-centered">
             <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
