--- a/frontend/src/app/components/admin/admin-charts/admin-charts-leaguebyid/admin-charts-leaguebyid.component.html
+++ b/frontend/src/app/components/admin/admin-charts/admin-charts-leaguebyid/admin-charts-leaguebyid.component.html
@@ -1,10 +1,18 @@
 <div class="m-container w-100">
     <h2 class="m-b-20">LIGAS DE {{user.nombre | uppercase}}</h2>
     <div class="grid-4">
-        <div style="position: relative" class="m-container shadowed-div cont-centered">
-            <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-            <h5 class="m-b-20 m-h5">Premier League</h5>
-            <a routerLink="/admin/charts/leagues-by-user-id/chart" class="btn a-formatted">Ver Gráficas &raquo;</a>
+        <div *ngFor="let x of leagues" style="position: relative" class="f-centered-container m-container shadowed-div cont-centered">
+            <div>
+                <img style="width: 95%" class="m-b-20" src={{x.image}} alt="logo-img">
+                <h5 class="m-b-20 m-h5">{{x.nombre}}</h5>
+                <a routerLink="/admin/charts/{{iduser}}/{{x._id}}" class="btn a-formatted">Ver Gráficas &raquo;</a>
+            </div>
         </div>
     </div>
+    <ng-container *ngIf="leagues.length === 0">
+        <div class="cont-centered">
+            <img class="m-b-40" id="sad-face" src="https://img.icons8.com/ios/452/sad.png" alt="sad-face.png">
+            <h1>Aún no hay ligas :(</h1>
+        </div>
+    </ng-container>
 </div>
