--- a/frontend/src/app/components/user/user-myleagues-leaguebyid/user-myleagues-leaguebyid.component.html
+++ b/frontend/src/app/components/user/user-myleagues-leaguebyid/user-myleagues-leaguebyid.component.html
@@ -8,8 +8,8 @@
             <div class="grid-2">
                 <button (click)="addTeam()" class="btn add-btn"><i class="fas fa-plus-circle"></i> Agregar Equipo</button>
                 <button routerLink="/user/my-leagues/{{league._id}}/get-table" class="btn purple-button"><i class="fas fa-table"></i> Ver Tabla</button>
-                <button class="btn yellow-button "><i class="fas fa-chart-pie"></i> Gráfica</button>
-                <button class="btn turquoise-button"><i class="fas fa-calendar-alt"></i> Jornadas</button>
+                <button routerLink="/user/my-leagues/{{league._id}}/chart" class="btn yellow-button "><i class="fas fa-chart-pie"></i> Gráfica</button>
+                <button routerLink="/user/my-leagues/{{league._id}}/journey" class="btn turquoise-button"><i class="fas fa-calendar-alt"></i> Jornadas</button>
             </div>
         </div>
     </div>
