--- a/frontend/src/app/components/user/user-myleagues-leaguebyid/leaguebyid-chart/leaguebyid-chart.component.html
+++ b/frontend/src/app/components/user/user-myleagues-leaguebyid/leaguebyid-chart/leaguebyid-chart.component.html
@@ -2,51 +2,28 @@
     <h2 class="m-b-20">GRÁFICAS Y RESULTADOS</h2>
     <div class="row">
         <div class="left-column">
-            <button class="btn m-b-20">Generar Reporte</button>
-            <table class="table-standard m-table">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Equipo</th>
-                        <th>Puntos</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Lorem</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Lorem</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Lorem</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Lorem</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Lorem</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Lorem</td>
-                        <td>12</td>
-                    </tr>
-                </tbody>
-            </table>
+            <button (click)="exportAsPDF('MyDIv')" class="btn m-b-20">Generar Reporte</button>
+            <div id="MyDIv">
+                <table class="table-standard m-table">
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Equipo</th>
+                            <th>Puntos</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let x of table; let i=i ndex " [attr.data-index]="i ">
+                            <td>{{i+1}}</td>
+                            <td>{{x.equipo.nombre}}</td>
+                            <td>{{x.puntaje}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
         <div class="right-column">
-            <div style="width: 300px; height: 300px; background-color: red; border-radius: 50%;"></div>
+            <div style="width: 300px; height: 300px; background-color: red; border-radius: 50%; "></div>
         </div>
     </div>
 </div>
