Se mejoró agregar liga

--- a/frontend/src/app/components/user/user-myleagues/user-myleagues.component.html
+++ b/frontend/src/app/components/user/user-myleagues/user-myleagues.component.html
@@ -1,6 +1,6 @@
 <div class="m-container w-100">
     <h2 class="m-b-20">MIS LIGAS</h2>
-    <button routerLink="/user/my-leagues/add" class="btn m-b-20 add-btn"><i class="fas fa-plus"></i> Agregar Liga</button>
+    <button routerLink="/user/my-leagues/add-league" class="btn m-b-20 add-btn"><i class="fas fa-plus"></i> Agregar Liga</button>
     <div class="grid-4">
         <div *ngFor="let x of league" style="position: relative" class="m-container shadowed-div cont-centered f-centered-container">
             <div>
