--- a/frontend/src/app/components/index/index.component.html
+++ b/frontend/src/app/components/index/index.component.html
@@ -3,7 +3,7 @@
         <div class="grid-2">
             <div class="f-vertical-centered-container" id="left-container">
                 <div>
-                    <h2>BIENVENIDO</h2>
+                    <h2>BIENVENIDOS</h2>
                     <hr>
                     <p class="m-b-20" style="font-size: 20px; margin-top: 10px;">Este es el proyecto del <b>Grupo #2</b></p>
                     <h4>Integrantes</h4>
